syntax="proto3";

package gift;

service Gift {
    rpc List(Page) returns (Gifts) {};
    rpc Send(SendGift)  returns (Status) {};
}

message Page {
    int32 num = 1;
    int32 size = 2;
}

message SendGift {
    string giftID = 1;
    string userID = 2;
    string toUserID = 3;
    string broadcastID = 4;
    int32 number = 5;
}

message Status {
    bool success = 1;
}

message GiftInfo {
    string giftID = 1;
    string name = 2;
    string image = 3;
    uint32 snowBall = 4;
    uint32 snowFlake = 5;
    int32 combo = 6;
}

message Gifts {
    repeated GiftInfo list = 1;
}
